2009-06-22  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): request getpagesize & sys_time
	* configure.in: do not invoke macros which come from explicitly
	requested packages because they are already called by gl_INIT
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/17941>
	(gl_GNU_MAKE, gl_LIBSIGSEGV, gl_FUNC_GETTIMEOFDAY)
	(gl_HEADER_SYS_TIME_H, gl_FUNC_GETPAGESIZE): explicitly requested
	(gt_LC_MESSAGES): called by AM_INTL_SUBDIR which is called by
	AM_GNU_GETTEXT which we call explicitly

2009-06-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* type.lisp (thread, mutex, exemption) [MULTITHREAD]: use THREADS
	instead of MT as package name

2009-06-20  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (create_thread) [WIN32_THREADS]: initialize thread's
	_signal_reenter_ok on Win32 as well

2009-06-19  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp (PQexecParams, PQprepare)
	(PQexecPrepared, PQsendQueryParams, PQsendPrepare)
	(PQsendQueryPrepared, PQfn): fix the declarations (input
	parameters were declared as output)
	Reported by SOS Sukaeto <sukaeto@gmail.com>

2009-06-19  Sam Steingold  <sds@gnu.org>

	* type.lisp (thread, mutex, exemption) [MULTITHREAD]: add atomic types

2009-06-19  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/configure.in: check types Oid and pqbool

2009-06-19  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (size_t, ssize_t): map to CS-CL:symbol-name in
	*C-TYPE-TABLE*, not to the symbol, as should be done as per DEF-C-TYPE

2009-06-18  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: use CL:MAKUNBOUND instead of :UNBOUND (removed)
	* zthread.d (SYMBOL-VALUE-THREAD): use CL:MAKUNBOUND instead of :UNBOUND
	as second return value
	* constsym.d (:UNBOUND): remove

2009-06-18  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: fix possible deadlock in SYMBOL-VALUE-THREAD
	* zthread.d (thread_symbol_place): do not check arguments. it is called