@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --tests-base=tests --aux-dir=src/build-aux --libtool --macro-prefix=gl fnmatch-gnu gettext gettimeofday gnu-make havelib libsigsegv link-follow localcharset nocrash regex stdbool stdint streq uniname/uniname unitypes uniwidth/width
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --tests-base=tests --aux-dir=src/build-aux --libtool --macro-prefix=gl fnmatch-gnu getpagesize gettext gettimeofday gnu-make havelib libsigsegv link-follow localcharset nocrash regex stdbool stdint streq sys_time uniname/uniname unitypes uniwidth/width
 
 AUTOMAKE_OPTIONS = 1.5 gnits subdir-objects
 
@@ -344,7 +344,7 @@ EXTRA_libgnu_la_SOURCES += mbsrtowcs-state.c mbsrtowcs.c
 ## begin gnulib module memchr
 
 
-EXTRA_DIST += memchr.c
+EXTRA_DIST += memchr.c memchr.valgrind
 
 EXTRA_libgnu_la_SOURCES += memchr.c
 
