@@ -1,10 +1,10 @@
-# memchr.m4 serial 6
+# memchr.m4 serial 7
 dnl Copyright (C) 2002, 2003, 2004, 2009 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
 
-AC_DEFUN([gl_FUNC_MEMCHR],
+AC_DEFUN_ONCE([gl_FUNC_MEMCHR],
 [
   dnl Check for prerequisites for memory fence checks.
   gl_FUNC_MMAP_ANON
